--- a/templates/footer.html
+++ b/templates/footer.html
@@ -29,7 +29,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; Ugochuwkwu Ndujekwu 2022</p>
         </div>
       </div>
     </div>
